# VCU_Firmware

./: .clang-format  .clang-tidy  .cproject  .editorconfig  .gitattributes  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  VCU_Version1.ioc
.github/workflows/: ci.yml
Core/Inc/: app.h  board.h  main.h  stm32f1xx_hal_conf.h
Core/Inc/app/: cli_task.h  dashboard_task.h  rtd_task.h
Core/Inc/device_drivers/: can_bus.h  map.h  pot.h  pressure_sense.h  stm32f103.h
Core/Inc/drivers/: can_bus.h  cli.h  current_sensor.h  dashboard.h  pot.h  pressure_sense.h  speed_sensor.h  stm32f103.h
Core/Inc/tasks/: apps_task.h  bppc_task.h  bse_task.h  canbus_task.h  error_task.h  rtd_task.h  safety_task.h
Core/Src/: app.c  board.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Core/Src/app/: canbus_task.c  cli_task.c  dashboard_task.c  rtd_task.c  safety_task.c
Core/Src/device_drivers/: can_bus.c  cli.c  dashboard.c  map.c  pot.c  pressure_sense.c  speed_sensor.c  stm32f103.c
Core/Src/drivers/: can_bus.c  cli.c  map.c  pot.c  pressure_sense.c  speed_sensor.c  stm32f103.c
Core/Src/tasks/: apps_task.c  bppc_task.c  bse_task.c  canbus_task.c  cli_task.c  dashboard_task.c  error_task.c  rtd_task.c  safety_task.c
Core/app/: app.c  app.h  canbus_task.c  canbus_task.h  cli_task.c  cli_task.h  dashboard_task.c  dashboard_task.h  rtd_task.c  rtd_task.h  safety_task.c  safety_task.h
Core/bsp/: board.c  board.h  board_config.h
Core/control/: apps.c  apps.h  linmap.c  linmap.h  state_machine.c  state_machine.h  torque.c  torque.h
Core/drivers/: cli.c  cli.h  dashboard.c  map.c  map.h  pot.c  pot.h  pressure_sense.h  speed_sensor.c  speed_sensor.h  stm32f103.c
Core/proto/: can_catalog.c  can_catalog.h
Core/safety/: fault.c  fault.h  plausibility.c  plausibility.h
cmake/: arm-none-eabi-gcc.cmake
docs/: Rearchitect_Spec.md  architecture.md  bringup.md  can_catalog.md  dependencies.md  design_notes.md  discrepancies.md  faults.md  hardware.md  pinmap.md  tasks.md
scripts/: build.sh  flash.sh  format.sh  size.sh
test/: CMakeLists.txt  test_apps.c  test_bppc.c  test_can_catalog.c  test_fault.c  test_framework.h  test_linmap.c  test_state_machine.c  test_torque.c
